# NTCG-project

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
include/: MHT.h  filter.h  laplacian.h  user_interface.h
mains/: main.cpp  test_LIBIGL.cpp
ressources/: armadillo.off  bugcow.off  bunny.off  bunnyunbug.off  cone.off  cow.off  lapin.off  nefertiti.off
src/: MHT.cpp  filter.cpp  laplacian.cpp  user_interface.cpp
